--- a/911DataAnalysis.ipynb
+++ b/911DataAnalysis.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "911DataAnalysis",
       "provenance": [],
-      "authorship_tag": "ABX9TyN2aEi3Y+cjEVNJ0VNonhHd",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyMftiJtyzoavPnqMdSUOztq"
     },
     "kernelspec": {
       "name": "python3",
@@ -14,16 +13,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Sriram-Sudharsan/911DataAnalytics/blob/main/911DataAnalysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -35,7 +24,7 @@
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -45,18 +34,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4a9feb7e-11f6-4b8e-e251-0f086e752b57"
+        "outputId": "ff1be5dc-27eb-4c88-855b-d9294589d19f"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount(\"/content/gdrive\")"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mounted at /content/gdrive\n"
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -70,14 +59,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "d3c0ae2a-b867-47f1-ab41-a78450e36d6e"
+        "outputId": "18784326-9445-412e-dc1e-9f90438be598"
       },
       "source": [
         "#Reading the data from the csv file\n",
         "df=pd.read_csv(\"/content/gdrive/My Drive/Dataset/911.csv\")\n",
         "df"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -270,7 +259,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 21
         }
       ]
     },
@@ -281,12 +270,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "63UfJNSD9ssx",
-        "outputId": "5307e671-a38b-4b4e-d8ff-2852f41bd15b"
+        "outputId": "a9f38c6e-57a2-4c72-f85e-4c777eb75543"
       },
       "source": [
         "df.info()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -320,13 +309,13 @@
           "height": 1000
         },
         "id": "EwbzlGJz-7oR",
-        "outputId": "4aae5cff-6f6c-499d-c5c7-4d39c68ac650"
+        "outputId": "d93b3cc8-37d2-495a-dbc4-70eb0bd3a00e"
       },
       "source": [
         "#visualize the first 20 rows\n",
         "df.head(20)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -635,7 +624,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 23
         }
       ]
     },
@@ -664,12 +653,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vqJMJB7q_FiI",
-        "outputId": "48a61bcb-7392-4696-e2ce-561475a77afa"
+        "outputId": "176fe188-c1c8-4681-ba7f-a6e9263d6bf8"
       },
       "source": [
         "df['twp'].value_counts().head(10)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -691,7 +680,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 24
         }
       ]
     },
@@ -702,12 +691,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iH3T7_ttAzOd",
-        "outputId": "409582bf-e44b-4601-a378-37cdca00601a"
+        "outputId": "e2918bd6-9519-46da-ff22-0ffc59dd1e65"
       },
       "source": [
         "df['zip'].value_counts().head(10)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -729,7 +718,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 25
         }
       ]
     },
@@ -758,12 +747,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HZX4AKDeA-BM",
-        "outputId": "89d6ed5b-d63d-4a74-d4c5-381fbd0292c8"
+        "outputId": "69ec9179-66a3-4f71-89ff-79df7e5cfc3e"
       },
       "source": [
         "type(df['timeStamp'][0])\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -775,7 +764,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 26
         }
       ]
     },
@@ -787,7 +776,7 @@
       "source": [
         "df['timeStamp'] = pd.to_datetime(df['timeStamp'])\n"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -797,7 +786,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q4euwEvMDhKw",
-        "outputId": "f238f687-8cc6-4183-b4a9-511cdfaf4465"
+        "outputId": "70080e8f-0ea8-45df-ff50-d8482ba1ca94"
       },
       "source": [
         "time = df['timeStamp'].iloc[31]\n",
@@ -806,7 +795,7 @@
         "print('Month:',time.month)\n",
         "print('Day of Week:',time.dayofweek)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -829,7 +818,7 @@
         "df['Day of Week'] = df['timeStamp'].apply(lambda x: x.dayofweek)\n",
         "df['Hour'] = df['timeStamp'].apply(lambda x: x.hour)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -840,7 +829,7 @@
       "source": [
         ""
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -851,7 +840,7 @@
           "height": 228
         },
         "id": "g98OKaC4DwqC",
-        "outputId": "63b2c72f-2dff-45eb-ad59-3aad4cf01f36"
+        "outputId": "7379b6d6-16a1-484c-93b1-4f2a5e568ed9"
       },
       "source": [
         "datemap = {0:'Sun',1:'Mon',2:'Tue',3:'Wed',4:'Thu',5:'Fri',6:'Sat'}\n",
@@ -860,7 +849,7 @@
         "\n",
         "df.head(1)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -928,7 +917,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 30
         }
       ]
     },
@@ -950,7 +939,7 @@
         "\n",
         "df['motive'] = df['title'].apply(lambda x: x.split(':')[0])"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -960,12 +949,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pIVwXRI_FT_3",
-        "outputId": "79092930-86d8-4b13-d7f8-4c6faa643218"
+        "outputId": "86773f73-45bf-4faf-907c-925bab357d0a"
       },
       "source": [
         "df['motive'].value_counts()"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -980,7 +969,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 38
+          "execution_count": 32
         }
       ]
     },
@@ -992,13 +981,13 @@
           "height": 353
         },
         "id": "51TGNDl8FXCZ",
-        "outputId": "13eba5ca-d5ea-41c7-90df-1513e4f018ca"
+        "outputId": "90355c56-212f-485c-9506-2aa8b49f5993"
       },
       "source": [
         "\n",
         "sns.countplot(df['motive'])"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1012,13 +1001,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7febab76ca90>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f8b669ee510>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 37
+          "execution_count": 33
         },
         {
           "output_type": "display_data",
@@ -1043,14 +1032,14 @@
           "height": 353
         },
         "id": "MI_qgrZkFcbS",
-        "outputId": "93625ec0-a38e-445a-842a-5d664d5b9642"
+        "outputId": "3d03b7bb-e394-436c-8bf2-4b24ba1c0fd5"
       },
       "source": [
         "sns.countplot(df['Day of Week'],hue=df['motive'])\n",
         "\n",
         "plt.legend(bbox_to_anchor=(1,1))"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1064,13 +1053,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x7feba8558450>"
+              "<matplotlib.legend.Legend at 0x7f8b7ba87650>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 44
+          "execution_count": 34
         },
         {
           "output_type": "display_data",
@@ -1095,14 +1084,14 @@
           "height": 353
         },
         "id": "gDnb3NktFj-B",
-        "outputId": "e603a9b9-b6b1-4696-f4ce-b19178530685"
+        "outputId": "028ea566-40fd-45f8-dc9b-9d690f4906f1"
       },
       "source": [
         "sns.countplot(df['Month'],hue=df['motive'])\n",
         "\n",
         "plt.legend(bbox_to_anchor=(1,1))"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1116,13 +1105,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x7feba8461e10>"
+              "<matplotlib.legend.Legend at 0x7f8b66a1f950>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 46
+          "execution_count": 35
         },
         {
           "output_type": "display_data",
@@ -1142,7 +1131,108 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "B76aoLYpGRBb"
+        "id": "B76aoLYpGRBb",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 228
+        },
+        "outputId": "47b77352-a181-4faf-f67b-6db1a02f0c9e"
+      },
+      "source": [
+        "df['Date']=df['timeStamp'].apply(lambda x: x.date())\n",
+        "df.head(1)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>lat</th>\n",
+              "      <th>lng</th>\n",
+              "      <th>desc</th>\n",
+              "      <th>zip</th>\n",
+              "      <th>title</th>\n",
+              "      <th>timeStamp</th>\n",
+              "      <th>twp</th>\n",
+              "      <th>addr</th>\n",
+              "      <th>e</th>\n",
+              "      <th>Month</th>\n",
+              "      <th>Day of Week</th>\n",
+              "      <th>Hour</th>\n",
+              "      <th>motive</th>\n",
+              "      <th>Date</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>40.297876</td>\n",
+              "      <td>-75.581294</td>\n",
+              "      <td>REINDEER CT &amp; DEAD END;  NEW HANOVER; Station ...</td>\n",
+              "      <td>19525.0</td>\n",
+              "      <td>EMS: BACK PAINS/INJURY</td>\n",
+              "      <td>2015-12-10 17:10:52</td>\n",
+              "      <td>NEW HANOVER</td>\n",
+              "      <td>REINDEER CT &amp; DEAD END</td>\n",
+              "      <td>1</td>\n",
+              "      <td>12</td>\n",
+              "      <td>Wed</td>\n",
+              "      <td>17</td>\n",
+              "      <td>EMS</td>\n",
+              "      <td>2015-12-10</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "         lat        lng  ... motive        Date\n",
+              "0  40.297876 -75.581294  ...    EMS  2015-12-10\n",
+              "\n",
+              "[1 rows x 14 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Yi_FgJADjE5w"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-unVpJMbkGEc"
       },
       "source": [
         ""
