--- a/EDA_911.ipynb
+++ b/EDA_911.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "EDA-911",
       "provenance": [],
-      "authorship_tag": "ABX9TyNZxDMAD1lIsg7Qpjy/r2qG"
+      "authorship_tag": "ABX9TyOzOPFC2Q4V/K4MwQeLSRij",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Sriram-Sudharsan/911DataAnalytics/blob/main/EDA_911.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -807,25 +818,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M-mmLZrWp40d",
-        "outputId": "a3ba21ed-66c1-4e33-8ca0-28b9dba9eb3b"
+        "outputId": "3814acda-b54f-4e57-8327-d9afe42e8a9f"
       },
       "source": [
         "df.columns\n",
         "#confirms column \"e\" has been removed"
       ],
-      "execution_count": 19,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Index(['lat', 'lng', 'desc', 'zip', 'title', 'timeStamp', 'twp', 'addr'], dtype='object')"
+              "Index(['lat', 'lng', 'desc', 'zip', 'title', 'timeStamp', 'twp', 'addr',\n",
+              "       'Month', 'Day of Week', 'Hour', 'Year', 'Date', 'Day'],\n",
+              "      dtype='object')"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 34
         }
       ]
     },
@@ -840,15 +853,55 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "9iRw6KxNp9Hp"
+        "id": "RnvZiGj0snGi"
       },
       "source": [
-        ""
+        "Mapping the week day to its corresponding number"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9iRw6KxNp9Hp",
+        "outputId": "b15111bd-fbf2-4b27-c439-08214d9ff6a1"
+      },
+      "source": [
+        "df['timeStamp'] = pd.to_datetime(df['timeStamp'])\n",
+        "time = df['timeStamp'].iloc[31]\n",
+        "\n",
+        "print('Hour:',time.hour)\n",
+        "print('Month:',time.month)\n",
+        "print('Day of Week:',time.dayofweek)\n",
+        "\n",
+        "df['Month'] = df['timeStamp'].apply(lambda x: x.month)\n",
+        "df['Day'] = df['timeStamp'].apply(lambda x: x.dayofweek)\n",
+        "df['Hour'] = df['timeStamp'].apply(lambda x: x.hour)\n",
+        "#Extracting year from timeStamp\n",
+        "df[\"Year\"]=df[\"timeStamp\"].dt.year\n",
+        "#Extracting date\n",
+        "df[\"Date\"]=df[\"timeStamp\"].dt.date\n",
+        "\n",
+        "datemap = {0:'Sun',1:'Mon',2:'Tue',3:'Wed',4:'Thu',5:'Fri',6:'Sat'}\n",
+        "\n",
+        "df['Day'] = df['Day'].map(datemap)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hour: 18\n",
+            "Month: 12\n",
+            "Day of Week: 3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -858,6 +911,115 @@
       "source": [
         ""
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1X-Cj-f_tXng"
+      },
+      "source": [
+        "df.drop(\"Day of Week\",axis=1,inplace=True)"
+      ],
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 192
+        },
+        "id": "WZrliQK9tYOZ",
+        "outputId": "6060eb5f-e3e1-49aa-f698-cf673db16f12"
+      },
+      "source": [
+        "df.head(1)"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>lat</th>\n",
+              "      <th>lng</th>\n",
+              "      <th>desc</th>\n",
+              "      <th>zip</th>\n",
+              "      <th>title</th>\n",
+              "      <th>timeStamp</th>\n",
+              "      <th>twp</th>\n",
+              "      <th>addr</th>\n",
+              "      <th>Month</th>\n",
+              "      <th>Hour</th>\n",
+              "      <th>Year</th>\n",
+              "      <th>Date</th>\n",
+              "      <th>Day</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>40.297876</td>\n",
+              "      <td>-75.581294</td>\n",
+              "      <td>REINDEER CT &amp; DEAD END;  NEW HANOVER; Station ...</td>\n",
+              "      <td>19525.0</td>\n",
+              "      <td>EMS: BACK PAINS/INJURY</td>\n",
+              "      <td>2015-12-10 17:10:52</td>\n",
+              "      <td>NEW HANOVER</td>\n",
+              "      <td>REINDEER CT &amp; DEAD END</td>\n",
+              "      <td>12</td>\n",
+              "      <td>17</td>\n",
+              "      <td>2015</td>\n",
+              "      <td>2015-12-10</td>\n",
+              "      <td>Wed</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "         lat        lng  ...        Date  Day\n",
+              "0  40.297876 -75.581294  ...  2015-12-10  Wed\n",
+              "\n",
+              "[1 rows x 13 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nZCZAyPburPl"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
