--- a/EDA_911.ipynb
+++ b/EDA_911.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "EDA-911",
       "provenance": [],
-      "authorship_tag": "ABX9TyOzOPFC2Q4V/K4MwQeLSRij",
+      "authorship_tag": "ABX9TyNeoiKWaHIaf0vFQ/YuRZPH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
         "%matplotlib inline \n",
         "import seaborn as sns\n"
       ],
-      "execution_count": 1,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -49,18 +49,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xLrwig7xmT1Z",
-        "outputId": "711a2dcc-8375-4a30-9ff4-462ec65526f6"
+        "outputId": "9648fab5-701b-4834-8460-a05eed79a0a7"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount(\"/content/gdrive\")"
       ],
-      "execution_count": 2,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mounted at /content/gdrive\n"
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -74,14 +74,14 @@
           "height": 1000
         },
         "id": "4Gdx-KcMmntW",
-        "outputId": "a3e0e39b-e393-474f-d136-983389fe1553"
+        "outputId": "52d00636-4033-4a4d-a7f1-564c4ad0d15d"
       },
       "source": [
         "#Reading the data from the csv file\n",
         "df=pd.read_csv(\"/content/gdrive/My Drive/Dataset/911.csv\")\n",
         "df"
       ],
-      "execution_count": 3,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -274,7 +274,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 72
         }
       ]
     },
@@ -303,13 +303,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nufM92TumxKE",
-        "outputId": "52460bc1-8987-4309-dd55-f7670ab0484d"
+        "outputId": "a9d1b58c-85a3-4e42-bf7c-0331206d8070"
       },
       "source": [
         "df.shape\n",
         "#No of rows, No of columns are displayed"
       ],
-      "execution_count": 6,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -321,7 +321,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 73
         }
       ]
     },
@@ -350,12 +350,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "liAfry96m_md",
-        "outputId": "1a2969cf-9417-4b96-b9d3-53e6835d579c"
+        "outputId": "1cefb1cc-162d-41db-81b7-7cab59640181"
       },
       "source": [
         "len(df.columns)"
       ],
-      "execution_count": 7,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -367,7 +367,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 74
         }
       ]
     },
@@ -378,12 +378,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_sNjResxnY-6",
-        "outputId": "3cb34261-600e-46d1-8c24-a489d4300087"
+        "outputId": "14ec5c3d-c9b3-4798-ea3a-657b2a4d329e"
       },
       "source": [
         "df.columns"
       ],
-      "execution_count": 8,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -395,7 +395,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 75
         }
       ]
     },
@@ -407,12 +407,12 @@
           "height": 306
         },
         "id": "fBbxqfuynaF_",
-        "outputId": "1be40b9d-7a60-4a7d-9b97-1aa078ab42e8"
+        "outputId": "91955a8e-b9b2-4ef6-e2b3-3ac1bcdfcfea"
       },
       "source": [
         "df.describe()"
       ],
-      "execution_count": 9,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -518,7 +518,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 76
         }
       ]
     },
@@ -539,13 +539,13 @@
           "height": 214
         },
         "id": "jUg4fJwBn3a8",
-        "outputId": "206e97b0-fe46-4daf-e28e-cdce60408787"
+        "outputId": "82c8d151-7bde-4367-d4dc-92aea898e0ff"
       },
       "source": [
         "categorical_data=df.dtypes[df.dtypes==object].index   \n",
         "df[categorical_data].describe() "
       ],
-      "execution_count": 10,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -626,7 +626,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 77
         }
       ]
     },
@@ -646,12 +646,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KWZKFSqIoJYw",
-        "outputId": "efdbb96b-bec3-4744-f7b8-25dcb6885ff9"
+        "outputId": "c7c05e48-7a26-4e79-979f-3df414cce065"
       },
       "source": [
         "df.isnull().sum()"
       ],
-      "execution_count": 12,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -672,7 +672,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 78
         }
       ]
     },
@@ -703,7 +703,7 @@
         "columns_fill=[\"zip\",\"twp\"]\n",
         "df.loc[:,columns_fill]=df.loc[:,columns_fill].ffill()"
       ],
-      "execution_count": 13,
+      "execution_count": 79,
       "outputs": []
     },
     {
@@ -713,12 +713,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9XU0XqX2pdXb",
-        "outputId": "14ea0ee6-64d7-465e-b71c-4b8388123af0"
+        "outputId": "0309f5f2-7340-468f-9228-09c64b783871"
       },
       "source": [
         "df.isnull().sum()"
       ],
-      "execution_count": 14,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -739,7 +739,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 80
         }
       ]
     },
@@ -759,12 +759,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-iSYoEP7py3U",
-        "outputId": "160c39ef-ac28-4719-8834-6b5ddefc21c9"
+        "outputId": "e8537166-1156-4d6f-c2b9-5b89904cbf86"
       },
       "source": [
         "df.e.unique"
       ],
-      "execution_count": 15,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -787,7 +787,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 81
         }
       ]
     },
@@ -808,7 +808,7 @@
       "source": [
         "df.drop(\"e\",axis=1,inplace=True)"
       ],
-      "execution_count": 16,
+      "execution_count": 82,
       "outputs": []
     },
     {
@@ -818,27 +818,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M-mmLZrWp40d",
-        "outputId": "3814acda-b54f-4e57-8327-d9afe42e8a9f"
+        "outputId": "a6c1c4d0-a3b5-4d58-8c56-7ec754838cd3"
       },
       "source": [
         "df.columns\n",
         "#confirms column \"e\" has been removed"
       ],
-      "execution_count": 34,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Index(['lat', 'lng', 'desc', 'zip', 'title', 'timeStamp', 'twp', 'addr',\n",
-              "       'Month', 'Day of Week', 'Hour', 'Year', 'Date', 'Day'],\n",
-              "      dtype='object')"
+              "Index(['lat', 'lng', 'desc', 'zip', 'title', 'timeStamp', 'twp', 'addr'], dtype='object')"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 83
         }
       ]
     },
@@ -868,7 +866,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9iRw6KxNp9Hp",
-        "outputId": "b15111bd-fbf2-4b27-c439-08214d9ff6a1"
+        "outputId": "234c2ed8-e2bd-4bc8-fa4f-8757a796b81b"
       },
       "source": [
         "df['timeStamp'] = pd.to_datetime(df['timeStamp'])\n",
@@ -890,7 +888,7 @@
         "\n",
         "df['Day'] = df['Day'].map(datemap)"
       ],
-      "execution_count": 35,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "stream",
@@ -918,9 +916,9 @@
         "id": "1X-Cj-f_tXng"
       },
       "source": [
-        "df.drop(\"Day of Week\",axis=1,inplace=True)"
+        "#df.drop(\"Day of Week\",axis=1,inplace=True)"
       ],
-      "execution_count": 39,
+      "execution_count": 85,
       "outputs": []
     },
     {
@@ -931,12 +929,12 @@
           "height": 192
         },
         "id": "WZrliQK9tYOZ",
-        "outputId": "6060eb5f-e3e1-49aa-f698-cf673db16f12"
+        "outputId": "566b0af7-05da-4889-fcd4-8f5efa416f74"
       },
       "source": [
         "df.head(1)"
       ],
-      "execution_count": 40,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -969,10 +967,10 @@
               "      <th>twp</th>\n",
               "      <th>addr</th>\n",
               "      <th>Month</th>\n",
+              "      <th>Day</th>\n",
               "      <th>Hour</th>\n",
               "      <th>Year</th>\n",
               "      <th>Date</th>\n",
-              "      <th>Day</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -987,18 +985,18 @@
               "      <td>NEW HANOVER</td>\n",
               "      <td>REINDEER CT &amp; DEAD END</td>\n",
               "      <td>12</td>\n",
+              "      <td>Wed</td>\n",
               "      <td>17</td>\n",
               "      <td>2015</td>\n",
               "      <td>2015-12-10</td>\n",
-              "      <td>Wed</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "         lat        lng  ...        Date  Day\n",
-              "0  40.297876 -75.581294  ...  2015-12-10  Wed\n",
+              "         lat        lng  ...  Year        Date\n",
+              "0  40.297876 -75.581294  ...  2015  2015-12-10\n",
               "\n",
               "[1 rows x 13 columns]"
             ]
@@ -1006,8 +1004,17 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 40
+          "execution_count": 86
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "07vAlTtUv-cw"
+      },
+      "source": [
+        "### **Part2: Splitting title column into category of the emergency and reason**"
       ]
     },
     {
@@ -1016,9 +1023,54 @@
         "id": "nZCZAyPburPl"
       },
       "source": [
+        "df[\"Category\"]=df[\"title\"].str.split(\":\",expand=True)[0]\n",
+        "\n",
+        "df[\"Reason\"]=df[\"title\"].str.split(\":\",expand=True)[1]\n",
+        "1\n",
+        "df.drop(\"title\",axis=1,inplace=True)\n"
+      ],
+      "execution_count": 87,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tYysSJh9wVGd",
+        "outputId": "f8089386-10b8-4aaf-c36f-4056f1e51d43"
+      },
+      "source": [
+        "df.columns  "
+      ],
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['lat', 'lng', 'desc', 'zip', 'timeStamp', 'twp', 'addr', 'Month', 'Day',\n",
+              "       'Hour', 'Year', 'Date', 'Category', 'Reason'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 88
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yJKtFyNDwpJB"
+      },
+      "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 88,
       "outputs": []
     }
   ]
